# gitpod

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  .yarnrc.yml  1658144661198-WorkspaceInstanceUsageAddExtraFields.ts  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLA.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  License.AGPL.txt  License.MIT.txt  License.enterprise.txt  License.third-party.go.txt  License.third-party.npm.txt  License.txt  Monitor Branch Protection Changes.yml  NOTES.md  OWNERS  OWNERS_ALIASES  README-RUST.md  README.md  SECURITY.md  WORKSPACE.yaml  (+24 more)
components/installer/: BUILD.yaml  Cargo.toml  README.md  example-config.yaml  go.mod  leeway.Dockerfile
components/installer/cmd/: render.go  render_apply.go
components/installer/src/: config.rs  install.rs  lib.rs  main.rs  validate.rs
components/installer/tests/: installer_tests.rs
components/server/: .eslintrc  BUILD.yaml  CLAUDE.md  Cargo.toml  biome.json  connections.yml  debug.sh  install-gh-app.sh  key  leeway.Dockerfile  mocha.opts  package.json  reset-chargebee-test-subs.sh  server-deploy-post-telepresence.yaml  server-deploy-telepresence.yaml  tsconfig.json  tslint.yaml
components/server/dev/: config.json
components/server/go/: BUILD.yaml  go.mod
components/server/migrations/: 001_initial.sql
components/server/src/: analytics-controller.ts  analytics.ts  auth.rs  branding-parser.ts  config.ts  container-module.ts  database.rs  debug-app.ts  env.ts  experiments.ts  express-util.spec.ts  express-util.ts  express.ts  handlers.rs  ide-config.ts  ide-service.spec.ts  ide-service.ts  init.ts  linkedin-service.ts  main.rs  main.ts  monitoring-endpoints.ts  one-time-secret-server.ts  patch-agent-base.ts  perms.ts  (+8 more)
(+9421 files in other folders)
