[package]
name = "gitpod-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[lib]
name = "gitpod_installer"
path = "src/lib.rs"

[[bin]]
name = "gitpod-installer"
path = "src/main.rs"
